--- a/kwordle/index.html
+++ b/kwordle/index.html
@@ -29,8 +29,8 @@
     
     <div class="button-container">
       <button id="reset-button" onclick="resetGame()">New Game</button>
-      <button id="hard-mode-button" onclick="toggleHardMode()">Hard Mode: OFF</button>
       <button id="stats-button" onclick="showStatistics()">Stats</button>
+      <button id="update" onclick="window.location.reload();">Update</button>
     </div>
   </div>
   
