--- a/kwordle/index.html
+++ b/kwordle/index.html
@@ -29,7 +29,9 @@
     
     <div class="button-container">
       <button id="reset-button" onclick="resetGame()">New Game</button>
+      <button id="lang" onclick="changeLanguage()">English</button>
       <button id="stats-button" onclick="showStatistics()">Stats</button>
+      <button id="credits-button" onclick="showCredits()">Credits</button>
       <button id="update" onclick="window.location.reload();">Update</button>
     </div>
   </div>
@@ -42,7 +44,14 @@
       </div>
     </div>
   </div>
-  
+  <div id="credits-modal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeCredits()">&times;</span>
+      <div id="credits-content">
+        <!-- Credits will be populated by JavaScript -->
+      </div>
+    </div>
+  </div>
   <div class="footer">
     <p>KWordle v1.1.0 - Wordle for Kindle</p>
   </div>
