German and French languages added + a few other improvements.

--- a/kwordle/index.html
+++ b/kwordle/index.html
@@ -12,7 +12,7 @@
 <body onload="onPageLoad()">
   <div id="log" style="display:none;"></div>
 
-  <h1 id="title">KWordle</h1>
+  <h1><img src="wordle-icon.png" width="30%"/></h1>
   
   <div id="game-container">
     <div id="message" class="message"></div>
